force-app/main/default/objects/MSN_WorkType_Reinstatement_Step__c/MSN_WorkType_Reinstatement_Step__c.object-meta.xml
<CustomObject>
    <description>This object links a parent reinstatement work type (e.g. Broom off concrete) to one or multiple child reinstatement work types  (such as &quot;Breakout&quot;, &quot;Pour concrete&quot;, &quot;Ruggasol&quot;, &quot;Wash-off&quot;) that are part of the whole reinstatement process as substeps.</description>
    <label>Reinstatement Step</label>
    <nameField>
        <displayFormat>RST-{0000}</displayFormat>
        <label>Reinstatement Step</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reinstatement Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>