force-app/main/default/objects/MSN_WorkType_Reinstatement_Step__c/fields/MSN_Child_Reinstatement_WorkType__c.field-meta.xml
<CustomField>
    <fullName>MSN_Child_Reinstatement_WorkType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link the reinstatement step to its child work type (that is: the work type that should be one step in the overall parent reinstatement job)</description>
    <inlineHelpText>Please select the child work type that should be part of the overall reinstatement process as a work step.</inlineHelpText>
    <label>Child Reinstatement Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Parent Reinstatement Work Type</relationshipLabel>
    <relationshipName>Child_Reinstatement_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>