force-app/main/default/objects/MSN_WorkType_Reinstatement_Step__c/fields/MSN_Child_WorkType_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_Child_WorkType_Name__c</fullName>
    <description>Cross object formula to retrieve the &quot;Name&quot; of the child work type linked in the lookup field.</description>
    <formula>MSN_Child_Reinstatement_WorkType__r.Name</formula>
    <label>Child Work Type - Name</label>
    <type>Text</type>
</CustomField>