force-app/main/default/objects/MSN_WorkType_Reinstatement_Step__c/fields/MSN_Parent_Reinstatement_WorkType__c.field-meta.xml
<CustomField>
    <fullName>MSN_Parent_Reinstatement_WorkType__c</fullName>
    <description>Used to link a Reinstatement Step to its parent Reinstatement Work Order</description>
    <label>Parent Reinstatement Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Reinstatement Steps</relationshipLabel>
    <relationshipName>Reinstatement_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>