force-app/main/default/objects/MSN_WorkType_Reinstatement_Step__c/fields/MSN_Reinstatement_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_Reinstatement_Step_Type__c</fullName>
    <description>Used to define whether the Child Work Type is either a &quot;Prerequisite&quot; to a reinstatement job or a sub &quot;Work Step&quot; of a specific Reinstatement Parent Work Type. This is for example used in the Screen Flow &quot;MSN - Work Order - Create Required Reinstatement Jobs&quot; to determine which Service Appointments and Child Work Orders need to be created.</description>
    <inlineHelpText>Please define, whether the Child Work Type is either a &quot;Prerequisite&quot; to a reinstatement job or a sub &quot;Work Step&quot; of a specific Reinstatement Parent Work Type.</inlineHelpText>
    <label>Reinstatement Step Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reinstatement Work Step</fullName>
            </value>
            <value>
                <fullName>Reinstatement Prerequisite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>