force-app/main/default/objects/MSN_WorkType_Reinstatement_Step__c/fields/MSN_ReinstatementStep_Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>MSN_ReinstatementStep_Execution_Order__c</fullName>
    <description>Used to define the execution order when a specific &quot;Reinstatement Step&quot; is supposed to be happening (e.g. 1. Breakout 2. Pour 3, Broom Off, 4 Collect etc.)</description>
    <inlineHelpText>Used to define the execution order when a specific &quot;Reinstatement Step&quot; is supposed to be happening (e.g. 1. Breakout 2. Pour 3. Broom Off 4. Collect etc.)</inlineHelpText>
    <label>Reinstatement Step Execution Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>